--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,44 @@
-<full-calendar [options]="calendarOptions"></full-calendar>
+<div class="d-flex justify-content-between p-3">
+<h2>22 - 28 January</h2>
+<div class="d-flex">
+    <button type="button" class="day fw-bold">Today</button>
+    <button class="prev" type="button"><i class="bi bi-arrow-left"></i></button>
+    <button class="next" type="button"><i class="bi bi-arrow-right"></i></button>
+</div>
+</div>
+
+<table class="calender mt-4 p-5 table-bordered top20">
+    <tr>
+        <th>Mon 01</th>
+        <th>Mon 02</th>
+        <th>Mon 03</th>
+        <th>Mon 04</th>
+        <th>Mon 05</th>
+        <th>Mon 06</th>
+        <th>Mon 07</th>
+    </tr>
+    <tr>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-danger"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 rounded-pill bg-danger"> 38134810</div>
+        </td>
+        <td>
+            
+        </td>
+        
+    </tr>
+</table>
