--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,14 +1,16 @@
 <div class="d-flex justify-content-between p-3">
-<h2>22 - 28 January</h2>
-<div class="d-flex">
-    <button type="button" class="day fw-bold">Today</button>
-    <button class="prev" type="button"><i class="bi bi-arrow-left"></i></button>
-    <button class="next" type="button"><i class="bi bi-arrow-right"></i></button>
-</div>
+    <h2 class="m-0">22 - 28 January</h2>
+    <div class="d-flex">
+        <button type="button" class="day fw-bold me-2">Today</button>
+        <button class="prev" type="button"><i class="bi bi-arrow-left"></i></button>
+        <button class="next" type="button"><i class="bi bi-arrow-right"></i></button>
+    </div>
 </div>
 
-<table class="calender mt-4 p-5 table-bordered top20">
-    <tr>
+<div class="d-flex calendar">
+    <div class="p-5 align-self-center"><p>All Day</p></div>
+<table class="p-5">
+    <tr class="p-3">
         <th>Mon 01</th>
         <th>Mon 02</th>
         <th>Mon 03</th>
@@ -19,26 +21,146 @@
     </tr>
     <tr>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-danger"> 38134810</div>
+            <div class="m-2 p-2 bg-red"> 38134810</div>
         </td>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
         </td>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+            <div class="m-2 p-2 bg-red"> 38134810</div>
         </td>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
         </td>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-success"> 38134810</div>
+            <div class="m-2 p-2 bg-red"> 38134810</div>
         </td>
         <td>
-            <div class="m-2 p-2 rounded-pill bg-danger"> 38134810</div>
+            <div class="m-2 p-2 bg-orange"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
+    </tr>
+    <tr>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-orange"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
         </td>
         <td>
             
         </td>
-        
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-orange"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
+    </tr>
+    <tr>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-orange"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
+    </tr>
+    <tr>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
+    </tr>
+    <tr>
+        <td>
+            <div class="m-2 p-2 bg-red"> 38134810</div>
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-green"> 38134810</div>
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
+    </tr>
+    <tr>
+        <td>
+
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-orange"> 38134810</div>
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+            <div class="m-2 p-2 bg-yellow"> 38134810</div>
+        </td>
+
     </tr>
 </table>
