--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -310,15 +310,16 @@
 
         <!-- Messages -->
         <div class="d-flex justify-content-between align-items-center mt-3">
-          <form class="me-3">
-            <div class="input-group" style="width: 10rem;">
-              <button class=" searchbox input-group-text bg-secondary-subtle ms-2" type="button" style="height: 2rem;">
+          <form class="me-3" style="width: 10rem;">
+            <div class="input-group ms-2" >
+              <button class=" searchbox input-group-text bg-secondary-subtle m-0 px-2" type="button" >
                 <i class="bi bi-search"></i>
               </button>
-              <input type="search" class="search form-control p-2 bg-secondary-subtle" style="height: 2rem;"
-                placeholder="Search users">
+              <input type="search" class="search form-control p-2 border-0 bg-secondary-subtle"
+                placeholder="Search users" id="searchUsers">
             </div>
           </form>
+
           <i class="bi bi-person-plus m-2"></i>
           <i class="bi bi-sliders me-3"></i>
         </div>
