--- a/src/app/mi-diagrama/mi-diagrama.component.css
+++ b/src/app/mi-diagrama/mi-diagrama.component.css
@@ -1,24 +1,25 @@
 .bg {
     background-image: url(../../assets/images/backgrounds/midiagramabg.png);
-    background-size: contain;
- background-position: center;
- background-repeat: no-repeat;
- 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border-radius: 20px;
+
 }
 
 .container {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     position: relative;
 }
 
-.container img {
-    max-width: 50%;
-    height: 50%;
-    position: absolute;
-    overflow: hidden;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
+
+.user {
+    background-image: url(../../assets/images/tree/Group\ 58.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    line-height: 0.05rem;
+    font-size: 8px;
 }
