--- a/src/app/captura-de-venta/captura-de-venta.component.html
+++ b/src/app/captura-de-venta/captura-de-venta.component.html
@@ -227,11 +227,11 @@
                         </select>
                     </div>
 
-                    <div class="row width mx-0">
+                    <div class="d-flex width mx-0">
 
-                        <div class="col-6">
+                        <div class="col-6 me-1">
                             <label for="rgu" class="form-label">RGU</label>
-                            <input type="text" id="rgu" class="form-control " [ngClass]="{'dark-mode': darkMode}" name="rgu">
+                            <input type="text" id="rgu" class="form-control " style="width: 140px;" [ngClass]="{'dark-mode': darkMode}" name="rgu">
                         </div>
 
                         <div class="col-6">
