--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -208,7 +208,7 @@
                 <form>
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}" [ngClass]="{'dark-mode': darkMode}">
+                        <select class="form-select" name="communidades" [ngClass]="{'dark-mode': darkMode}" [ngClass]="{'dark-mode': darkMode}">
                             <option>01/02/2024</option>
                             <option>02/2/2024</option>
                             <option>03/02/2024</option>
@@ -242,7 +242,7 @@
                 <form>
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}">
+                        <select class="form-select" name="progreso" [ngClass]="{'dark-mode': darkMode}">
                             <option>semana 3</option>
                             <option>Semana 4</option>
                             <option>Semana 5</option>
@@ -456,7 +456,7 @@
                 <form>
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}">
+                        <select class="form-select" name="fecha" [ngClass]="{'dark-mode': darkMode}">
                             <option>semana 3</option>
                             <option>Semana 4</option>
                             <option>Semana 5</option>
@@ -466,7 +466,7 @@
                 <form>
                     <div class="input-group">
                         <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
-                        <select class="form-select" [ngClass]="{'dark-mode': darkMode}">
+                        <select class="form-select" name="fecha2" [ngClass]="{'dark-mode': darkMode}">
                             <option>semana 3</option>
                             <option>Semana 4</option>
                             <option>Semana 5</option>
